# flowforge-ai

./: .env.example  .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: middleware.py  router.py
backend/app/api/routes/: executions.py  health.py
backend/app/core/: config.py  constants.py  exceptions.py  lifespan.py  logging.py  responses.py
backend/app/engine/: context.py  executor.py  expression_resolver.py  expressions.py  mapping.py  planner.py  registry.py  result.py  runner.py  state.py  template_resolver.py  workflow.py
backend/app/engine/executors/: base.py  condition.py  http_executor.py  merge.py  parallel.py  return_executor.py  transform.py  validation.py
backend/app/engine/nodes/: base.py
backend/app/integrations/: http_client.py
backend/app/schemas/: workflow.py
backend/app/services/: execution_service.py
backend/tests/api/: test_execute_workflow.py
backend/tests/engine/: test_executor.py  test_expression_resolver.py  test_http_executor.py  test_http_mapping.py  test_merge_executor.py  test_template_resolver.py  test_validation_executor.py
