[project]
name = "flowforge-ai-backend"
version = "0.1.0"
description = "Enterprise AI-Native Low-Code API Orchestration Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    "sqlalchemy>=2.0.43",
    "alembic>=1.16.0",
    "psycopg[binary]>=3.2.9",

    "redis>=6.4.0",

    "httpx>=0.28.1",

    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",

    "structlog>=25.4.0",

    "python-dotenv>=1.1.1",

    "orjson>=3.11.0",

    "prometheus-client>=0.22.1",

    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",

    "groq>=0.31.0",
]

[project.optional-dependencies]

dev = [

    "pytest>=8.4.1",

    "pytest-asyncio>=1.1.0",

    "pytest-cov>=6.2.1",

    "ruff>=0.12.0",

    "black>=25.1.0",

    "mypy>=1.17.0",

    "pre-commit>=4.2.0",
]

[tool.black]

line-length = 100

target-version = ["py312"]

[tool.ruff]

line-length = 100

target-version = "py312"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]

asyncio_mode = "auto"

testpaths = ["tests"]

[tool.mypy]

python_version = "3.12"

strict = true

ignore_missing_imports = true 